--- a/WEB_ver/index.html
+++ b/WEB_ver/index.html
@@ -1,81 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Page with Logo and Horizontal Buttons</title>
 <style>
-/* 现有样式 */
-.container {
-    display: flex; /* 使用Flexbox布局 */
-}
-.left, .right {
-    flex: 1; /* 使两个子容器平均分配父容器的空间 */
-}
-.left {
-    background-color: rgb(255, 255, 255);
-}
-.right {
-    background-color: rgb(255, 255, 255);
-}
-.iframeStyle {
+  body, html {
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: 100vh; /* 调整这个值以满足你的需求 */
+    height: 100%;
+    overflow: hidden;
+    background-color: #FFCB0B; /* 设置黄色为默认背景 */
+  }
+  .triangle-top-left, .triangle-bottom-right {
+    width: 0;
+    height: 0;
+    position: absolute;
+  }
+  .triangle-top-left {
+    border-left: 50vw solid #00274C;
+    border-bottom: 50vh solid transparent;
+  }
+  .triangle-bottom-right {
+    border-right: 50vw solid #00274C;
+    border-top: 50vh solid transparent;
+    bottom: 0;
+    right: 0;
+  }
+  .logo {
+    position: absolute;
+    top: 28%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: auto;
+  }
+  .buttons-container {
+    position: absolute;
+    top: 60%; /* 按钮组位于页面的中下部 */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex; /* 使用Flex布局使按钮并列 */
+    gap: 40px; /* 按钮之间的间隙 */
+  }
+  .button {
+    width: 300px; /* 固定按钮宽度 */
+    height: 100px; /* 固定按钮高度 */
+    padding: 10px; /* 内边距 */
     border: none;
-}
-.signature {
-    position: fixed;
-    right: 40px;
-    bottom: 20px;
-    color: grey;
-    font-family: 'Brush Script MT', cursive;
-    font-size: 20px
-}
-.signature a {
-    color: #5555FF;
-    text-decoration: none;
-}
-
-/* 新增样式 */
-.logo-container {
-    display: flex; /* 使用Flex布局确保Logo并列显示 */
-    justify-content: space-around; /* Logo之间的空间平均分配 */
-    background-color: white; /* 底色设置为白色 */
-    padding: 20px 0; /* 上下各增加20px的内边距，视觉上更加舒适 */
-    position: absolute; /* 使用绝对定位 */
-    top: 0; /* 定位到页面顶部 */
-    left: 0; /* 定位到页面左侧 */
-    width: 100%; /* 拉伸以覆盖整个页面宽度 */
-    z-index: 10; /* 确保Logo区域位于其他内容之上 */
-}
-
-.logo-img {
-    max-height: 100px; /* 根据需要调整Logo的大小 */
-    width: auto; /* 保持Logo的宽高比 */
-}
+    border-radius: 20px; /* 圆角效果 */
+    background-color: #00274C; /* 蓝色背景 */
+    color: white; /* 白色文字 */
+    font-size: 40px; /* 文字大小 */
+    text-align: center; /* 文字居中 */
+    line-height: 80px; /* 行高，用于垂直居中文本 */
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+  }
+  .button:hover {
+    transform: scale(1.1); /* 鼠标悬停时放大 */
+    background-color: #003E78; /* 鼠标悬停时变化背景色 */
+  }
 </style>
 </head>
 <body>
-
-  <div class="logo-container">
-    <img src="src/JI_logo.png" class="logo-img" alt="JI Logo" style="transform: scale(0.7);">
-    <img src="src/liming_cup_logo.png" class="logo-img" alt="Liming Cup Logo" style="transform: scale(1.2);">
-    <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.8);">
-    <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.8);">
-  </div>
-  
-
-<div class="container">
-  <div class="left">
-    <!-- 左侧子页面的内容 -->
-    <iframe src="stat\index.html" class="iframeStyle"></iframe>
-  </div>
-  <div class="right">
-    <!-- 右侧子页面的内容 -->
-    <iframe src="timer\index.html" class="iframeStyle"></iframe>
-  </div>
+<div class="triangle-top-left"></div>
+<div class="triangle-bottom-right"></div>
+<img src="src/liming_cup_logo.png" class="logo" alt="Logo">
+<div class="buttons-container">
+  <button class="button" onclick="location.href='page1.html'">Score Board</button>
+  <button class="button" onclick="location.href='page2.html'">Integrated</button>
+  <button class="button" onclick="location.href='page3.html'">Timer</button>
 </div>
-
-<div class="signature">
-    Designed by <a href="https://shihantian.github.io/">Moran</a>
-</div>
-
 </body>
 </html>
