--- a/WEB_ver/index.html
+++ b/WEB_ver/index.html
@@ -62,6 +62,46 @@
     transform: scale(1.1); /* 鼠标悬停时放大 */
     background-color: #003E78; /* 鼠标悬停时变化背景色 */
   }
+  @keyframes slideInFromLeft {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.triangle-top-left {
+  animation: slideInFromLeft 1s ease-out forwards; /* 从左边飞入 */
+}
+
+.triangle-bottom-right {
+  animation: slideInFromRight 1s ease-out forwards; /* 从右边飞入 */
+}
+
+.logo, .buttons-container {
+  opacity: 0; /* 初始化状态为透明 */
+  animation: fadeIn 1s ease-out 0.7s forwards; /* 在1秒后开始淡入，持续时间为1秒 */
+}
+
 </style>
 </head>
 <body>
