add: logo links

--- a/WEB_ver/just_score.html
+++ b/WEB_ver/just_score.html
@@ -81,10 +81,18 @@
 <body>
 
     <div class="logo-container">
-        <img src="src/JI_logo.png" class="logo-img" alt="JI Logo" style="transform: scale(0.6);">
-        <img src="src/liming_cup_logo.png" class="logo-img" alt="Liming Cup Logo" style="transform: scale(1.1);">
-        <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.7);">
-        <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.7);">
+        <a href="https://www.ji.sjtu.edu.cn/" target="_blank">
+            <img src="src/JI_logo.png" class="logo-img" alt="JI Logo" style="transform: scale(0.6);">
+        </a>
+        <a href="https://www.agibot.com/" target="_blank">
+            <img src="src/liming_cup_logo.png" class="logo-img" alt="Liming Cup Logo" style="transform: scale(1.1);">
+        </a>
+        <a href="http://www.zhejiangliming.com/" target="_blank">
+            <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.7);">
+        </a>
+        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/" target="_blank">
+            <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.7);">
+        </a>
     </div>
 
     <iframe src="stat/index.html" class="iframeStyle"></iframe>
