change: liming cup link

--- a/WEB_ver/just_score.html
+++ b/WEB_ver/just_score.html
@@ -84,7 +84,7 @@
         <a href="https://www.ji.sjtu.edu.cn/" target="_blank">
             <img src="src/JI_logo.png" class="logo-img" alt="JI Logo" style="transform: scale(0.6);">
         </a>
-        <a href="https://www.agibot.com/" target="_blank">
+        <a href="http://www.zhejiangliming.com/whlm/shzr.html" target="_blank">
             <img src="src/liming_cup_logo.png" class="logo-img" alt="Liming Cup Logo" style="transform: scale(1.1);">
         </a>
         <a href="http://www.zhejiangliming.com/" target="_blank">
