--- a/WEB_ver/timer/index.html
+++ b/WEB_ver/timer/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>比赛计时器</title>
+    <title>Timer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="timer">
         <div id="time">00:00</div>
-        <input type="number" id="inputMinutes" placeholder="输入分钟">
+        <input type="number" id="inputMinutes" placeholder="Enter minutes">
         <div id="buttons">
-            <button id="start">开始</button>
-            <button id="pause">暂停</button>
-            <button id="reset">重置</button>
+            <button id="start">START</button>
+            <button id="pause">PAUSE</button>
+            <button id="reset">RESET</button>
         </div>
     </div>
 
