--- a/WEB_ver/index.html
+++ b/WEB_ver/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page with Logo and Horizontal Buttons</title>
+  <title>Homepage</title>
   <style>
     body,
     html {
