change: shortened signiature

--- a/WEB_ver/index.html
+++ b/WEB_ver/index.html
@@ -164,7 +164,7 @@
   </div>
 
   <div class="signature">
-    Designed by <a href="https://shihantian.github.io/">Moran</a>
+     <a href="https://shihantian.github.io/">Moran</a>
 </div>
 </body>
 
