--- a/WEB_ver/just_score.html
+++ b/WEB_ver/just_score.html
@@ -72,7 +72,7 @@
         }
 
         .signature a {
-            color: #5555FF;
+            color: grey;
             text-decoration: none;
         }
     </style>
@@ -98,7 +98,7 @@
     <iframe src="stat/index.html" class="iframeStyle"></iframe>
 
     <div class="signature">
-        Designed by <a href="https://shihantian.github.io/">Moran</a>
+         <a href="https://shihantian.github.io/">Moran</a>
     </div>
 
 </body>
