--- a/WEB_ver/integrated.html
+++ b/WEB_ver/integrated.html
@@ -85,7 +85,7 @@
         }
 
         .signature a {
-            color: #5555FF;
+            color: grey;
             text-decoration: none;
         }
     </style>
@@ -123,7 +123,7 @@
     </div>
 
     <div class="signature">
-        Designed by <a href="https://shihantian.github.io/">Moran</a>
+         <a href="https://shihantian.github.io/">Moran</a>
     </div>
 
 </body>
