--- a/WEB_ver/just_time.html
+++ b/WEB_ver/just_time.html
@@ -70,7 +70,7 @@
         }
 
         .signature a {
-            color: #5555FF;
+            color: grey;
             text-decoration: none;
         }
     </style>
@@ -96,7 +96,7 @@
     <iframe src="timer/index.html" class="iframeStyle"></iframe>
 
     <div class="signature">
-        Designed by <a href="https://shihantian.github.io/">Moran</a>
+         <a href="https://shihantian.github.io/">Moran</a>
     </div>
 
 </body>
