change: adjust background

--- a/WEB_ver/just_score.html
+++ b/WEB_ver/just_score.html
@@ -24,7 +24,7 @@
         }
 
         .iframeStyle {
-            width: 95%;
+            width: 99%;
             height: calc(100vh - 140px);
             border: none;
             position: absolute;
@@ -97,9 +97,9 @@
 
     <iframe src="stat/index.html" class="iframeStyle"></iframe>
 
-    <div class="signature">
+    <!-- <div class="signature">
          <a href="https://shihantian.github.io/">Moran</a>
-    </div>
+    </div> -->
 
 </body>
 
