--- a/WEB_ver/timer/index.html
+++ b/WEB_ver/timer/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/56baafe52c.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="timer">
         <div id="time">00:00</div>
@@ -17,9 +20,16 @@
         </div>
     </div>
 
+    <div class="player">
+        <img src="src/cover1.jpg" alt="Song cover" class="cover">
+        <button class="play"><i class="fa-solid fa-circle-play"></i></button>
+        <button class="next"><i class="fa-solid fa-forward-step"></i></button>
+    </div>
+
     <script src="script.js"></script>
 
     <audio id="alarmSound" src="src\electronic-alarm-clock.mp3" type="audio/mp3"></audio>
 
 </body>
+
 </html>
