delete: deleted all signatures

--- a/WEB_ver/index.html
+++ b/WEB_ver/index.html
@@ -162,9 +162,9 @@
     <button class="button" onclick="location.href='just_time.html'">Timer</button>
   </div>
 
-  <div class="signature">
-     <a href="https://shihantian.github.io/">Moran</a>
-</div>
+  <!-- <div class="signature">
+    <a href="https://shihantian.github.io/">Moran</a>
+  </div> -->
 </body>
 
 </html>
