--- a/WEB_ver/just_time.html
+++ b/WEB_ver/just_time.html
@@ -60,6 +60,7 @@
                 /* 调整顶部留白 */
             }
         }
+
         .signature {
             position: fixed;
             right: 40px;
@@ -88,16 +89,17 @@
         <a href="http://www.zhejiangliming.com/" target="_blank">
             <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.7);">
         </a>
-        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/" target="_blank">
+        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/"
+            target="_blank">
             <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.7);">
         </a>
     </div>
 
     <iframe src="timer/index.html" class="iframeStyle"></iframe>
 
-    <div class="signature">
+    <!-- <div class="signature">
          <a href="https://shihantian.github.io/">Moran</a>
-    </div>
+    </div> -->
 
 </body>
 
