--- a/WEB_ver/integrated.html
+++ b/WEB_ver/integrated.html
@@ -104,11 +104,12 @@
         <a href="http://www.zhejiangliming.com/" target="_blank">
             <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.7);">
         </a>
-        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/" target="_blank">
+        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/"
+            target="_blank">
             <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.7);">
         </a>
     </div>
-    
+
 
 
     <div class="container">
@@ -122,9 +123,9 @@
         </div>
     </div>
 
-    <div class="signature">
+    <!-- <div class="signature">
          <a href="https://shihantian.github.io/">Moran</a>
-    </div>
+    </div> -->
 
 </body>
 
