--- a/WEB_ver/just_score.html
+++ b/WEB_ver/just_score.html
@@ -90,7 +90,8 @@
         <a href="http://www.zhejiangliming.com/" target="_blank">
             <img src="src/ZJLM_logo.jpg" class="logo-img" alt="ZJLM Logo" style="transform: scale(0.7);">
         </a>
-        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/" target="_blank">
+        <a href="https://www.ji.sjtu.edu.cn/cn/campus-life/student-organizations/ji-student-science-technology-and-innovation-association/"
+            target="_blank">
             <img src="src/SSTIA_logo.png" class="logo-img" alt="SSTIA Logo" style="transform: scale(0.7);">
         </a>
     </div>
