change: to a more confortable style

--- a/WEB_ver/stat/index.html
+++ b/WEB_ver/stat/index.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="gradient-strip"></div>
+    <!-- <div class="gradient-strip"></div> -->
     <button class="reset" onclick="resetScores()">Reset</button>
 
     <script src="script.js"></script>
