change: improve style

--- a/WEB_ver/integrated.html
+++ b/WEB_ver/integrated.html
@@ -78,14 +78,14 @@
         .signature {
             position: fixed;
             right: 40px;
-            bottom: 20px;
+            bottom: 5vh;
             color: grey;
             font-family: 'Brush Script MT', cursive;
             font-size: 20px
         }
 
         .signature a {
-            color: grey;
+            color: rgb(13, 90, 223);
             text-decoration: none;
         }
     </style>
@@ -123,9 +123,9 @@
         </div>
     </div>
 
-    <!-- <div class="signature">
-         <a href="https://shihantian.github.io/">Moran</a>
-    </div> -->
+    <div class="signature">
+         <a href="https://shihantian.github.io/">at Moran</a>
+    </div>
 
 </body>
 
