--- a/WEB_ver/timer/index.html
+++ b/WEB_ver/timer/index.html
@@ -28,6 +28,8 @@
 
     <script src="script.js"></script>
 
+    <div class="color-bar"></div>
+
     <audio id="alarmSound" src="src\electronic-alarm-clock.mp3" type="audio/mp3"></audio>
 
 </body>
