change: slightly modified

--- a/WEB_ver/integrated.html
+++ b/WEB_ver/integrated.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="signature">
-         <a href="https://shihantian.github.io/">at Moran</a>
+         <a href="https://shihantian.github.io/"></a>
     </div>
 
 </body>
